--- a/home.css
+++ b/home.css
@@ -1,40 +1,67 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-body{
+body {
   background-color: rgb(0, 0, 0);
 }
-.header{
+.header {
   position: absolute;
   top: 2px;
   left: 40px;
   width: 150px;
   height: 100px;
 }
-.navbar{
-    display: flex;
-    align-items: center;
-    gap: 20px;
-}
-#profile{
-  width: 30px;
-  height: 30px;
-  border-radius: 10%;
-  right: 10px;
-}
-.logo{
+
+.logo {
   width: 100%;
   height: 100%;
   object-fit: contain;
 }
-.main-image{
+.nav-header {
+  top: 1px;
+  left: 5px;
+  width: 150px;
+  height: 100px;
+}
+.navbar {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.search-bar {
+  width: 200px;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid #161729;
+  background-color: transparent;
+  color: white;
+  margin-left: 900px;
+  margin-top: 10px;
+}
+.bell-button {
+  background: none;
+  border: none;
+  color: white;
+  font-size: 20px;
+  cursor: pointer;
+  margin-left: 197vh;
+  margin-top:0% ;
+}
+#profile {
+  width: 30px;
+  height: 30px;
+  border-radius: 10%;
+  margin-left: 206vh;
+  top: 1px;
+}
+.main-image {
   width: 100%;
   height: 70vh;
   object-fit: cover;
 }
-.play-button{
+.play-button {
   position: absolute;
   top: 50%;
   left: 8%;
@@ -47,11 +74,11 @@ body{
   border-radius: 5px;
   cursor: pointer;
 }
-.play-button:hover{
+.play-button:hover {
   background-color: rgba(0, 0, 0, 0.8);
   color: white;
 }
-.my-list-button{
+.my-list-button {
   position: absolute;
   top: 50%;
   left: 20%;
@@ -64,13 +91,13 @@ body{
   border-radius: 5px;
   cursor: pointer;
 }
-.my-list-button:hover{
+.my-list-button:hover {
   background-color: rgba(0, 0, 0, 0.8);
   color: white;
-} 
-.heading{
+}
+.heading {
   font-family: Arial, sans-serif;
-  font-weight:700;
+  font-weight: 700;
   text-shadow: 5px 5px 6px rgba(0, 0, 0, 0.5);
   position: absolute;
   top: 40%;
@@ -79,7 +106,7 @@ body{
   font-size: 30px;
   color: rgb(255, 255, 255);
 }
-.para{
+.para {
   font-family: Arial, sans-serif;
   text-shadow: 5px 5px 6px rgba(0, 0, 0, 0.5);
   position: absolute;
@@ -89,7 +116,7 @@ body{
   font-size: 15px;
   color: rgb(255, 255, 255);
 }
-.sub-image{
+.sub-image {
   width: 20%;
   height: 30%;
   object-fit: fill;
@@ -99,11 +126,11 @@ body{
   align-items: center;
   border-radius: 10px;
 }
-#alice{
+#alice {
   height: 380px;
   width: 260px;
 }
-.sub-container{
+.sub-container {
   display: flex;
   justify-content: space-around;
   align-items: center;
